[gd_scene load_steps=2 format=3 uid="uid://dh1sya6up4j76"]

[ext_resource type="Script" path="res://script/normal_item.gd" id="1_pddd0"]

[node name="NormalItem" type="PanelContainer"]
custom_minimum_size = Vector2(256, 128)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_pddd0")

[node name="ItemMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="AttributeDisplay" type="VBoxContainer" parent="ItemMargin"]
layout_mode = 2

[node name="ItemName" type="RichTextLabel" parent="ItemMargin/AttributeDisplay"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="ItemDisplay" type="HBoxContainer" parent="ItemMargin/AttributeDisplay"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemImage" type="PanelContainer" parent="ItemMargin/AttributeDisplay/ItemDisplay"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="ItemStatScroll" type="ScrollContainer" parent="ItemMargin/AttributeDisplay/ItemDisplay"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="ItemStat" type="RichTextLabel" parent="ItemMargin/AttributeDisplay/ItemDisplay/ItemStatScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true

[node name="Amount" type="RichTextLabel" parent="ItemMargin/AttributeDisplay"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true
